# rag_tests

./: .gitignore  clean_json.py  dados.json  json_parser.py  pyproject.toml  simple_dataset_generator.py  simple_db_request.py  simple_pythia_benchmark.py  simple_pythia_request.py  simple_request.py
benchmark/: clean_json.py  simple_dataset_generator.py  simple_pythia_benchmark.py  simple_pythia_benchmark_nodialog.py
deepeval_mods/: template_pt.py
encoding_tests/: unicode_tests.py
llm_codes/: local_lmstudio_deepeval.py  simple_local_phi3.py  simple_local_phi3_deepeval.py
simple_scripts/: simple_db_request.py  simple_deepeval_test.py  simple_pythia_ask_request.py  simple_pythia_create_ask_request.py  simple_pythia_create_request.py  simple_pythia_load_request.py  simple_pythia_source_request.py
