[tool.poetry]
name = "rag_tests"
version = "0.1.0"
description = ""
authors = ["leandro <alvim.lgm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
deepeval = "^0.21.39"
simplejson = "^3.19.2"
unicodedata2 = "^15.1.0"
python-dotenv = "^1.0.1"
SQLAlchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
